# ftpc

./: .gitignore  .prettierignore  CLAUDE.md  MANIFEST.in  PUBLISHING.md  README.md  REWRITE.md  STATUS.md  build.ts  install.ps1  install.sh  package.json  pyproject.toml  requirements.txt  setup.cfg  tsconfig.json
.githooks/: pre-commit
.github/workflows/: npm-publish.yml  package.yml
docs/: ASYNCIO_MIGRATION_PLAN.md  ASYNC_SIMPLIFICATION_PLAN.md
examples/: 2026-01-01-hi-claude-this-is-a-repository-for-a-tuilibrary.txt
ftpc/: __init__.py  __main__.py  async_runner.py  displaydescriptor.py  exceptions.py  filedescriptor.py  sample_config.toml  storage.py
ftpc/clients/: __init__.py  async_azure_blob_client.py  async_azure_client.py  async_client.py  async_ftp_client.py  async_local_client.py  async_s3_client.py  async_sftp_client.py  async_wrapper.py  azureblobclient.py  azureclient.py  client.py  ftpclient.py  localclient.py  s3client.py  sftpclient.py
ftpc/config/: __init__.py  base.py  remotes.py
ftpc/tui/: __init__.py  async_tui.py  dialog.py  lswindow.py  remote_selector.py  tui.py
scripts/: install-hooks.ts  npm-launcher.js  npm-launcher.ts  package-npm.ts  package.ts
skills/ftpc-storage/: SKILL.md
skills/ftpc-storage-write/: SKILL.md
src/: cli.ts  config.ts  errors.ts  index.ts  paths.ts  proxy.ts  socks5.ts  storage.ts  types.ts  url.ts
src/browser/: render.ts  selector.ts  selector_render.ts  selector_terminal.ts  state.ts  terminal.ts
src/clients/: azure_blob.ts  azure_datalake.ts  azure_proxy.ts  ftp.ts  local.ts  s3.ts  sftp.ts
tests/: __init__.py  azure_blob.test.ts  azure_datalake.test.ts  browser.test.ts  cli.test.ts  config.test.ts  ftp.test.ts  integration.test.ts  local.test.ts  proxy.test.ts  s3.test.ts  selector.test.ts  sftp.test.ts  socks5.test.ts  storage.test.ts  test_config.py  test_filedescriptor.py  test_storage.py  url.test.ts
tests/bun/: azure_blob.test.ts  azure_datalake.test.ts  browser.test.ts  cli.test.ts  config.test.ts  ftp.test.ts  integration.test.ts  local.test.ts  s3.test.ts  selector.test.ts  sftp.test.ts  socks5.test.ts  storage.test.ts  url.test.ts
tests/clients/: test_async_clients.py  test_ftpclient.py  test_localclient.py
tests/fixtures/: test_data.py
tests/tui/: __init__.py  test_dialog.py
