[metadata]
name = ftpc
version = 0.1.0
description = TUI file transfer client with support for multiple storage backends
author = Edoardo Annunziata
author_email = annunziata.edoardo@outlook.com
url = https://github.com/edoannunziata/ftpc
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console :: Curses
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
install_requires =

[options.extras_require]
azure =
    azure-storage-file-datalake>=12.8.0
    azure-identity>=1.10.0
s3 =
    boto3>=1.28.0
sftp =
    paramiko>=3.0.0
all =
    azure-storage-file-datalake>=12.8.0
    azure-identity>=1.10.0
    boto3>=1.28.0
    paramiko>=3.0.0
    # Add any future optional dependencies here

[options.entry_points]
console_scripts =
    ftpc = ftpc.__main__:main

